# JamStation

./: README.md
PC2R_Client/: Client.java  ConnexionSecurisee.java  DiscussionInstantanee.java  PeerToPeer.java  SimpleSoundCapture.java  SocketPrincipale.java  SocketSecondaire.java  TextAreaDemo.java
PC2R_Serveur/: CMakeCache.txt  CMakeLists.txt  main.c~
PC2R_Serveur/include/: audio.h  client.h  serveur.h  serveur_audio.h  sound_effects.h  traceinstantsf.h
PC2R_Serveur/src/: audio.c  main.c  serveur.c  serveur_audio.c  sound_effects.c  traceinstantsf.c
